        compatibility.
    Packet filtering:
      Add support for Block Ack Req and Block Ack frame types (pull
        request #1039).
      Deprecate pcap_compile_nopcap().
      Add support for filtering packets encapsulated with VXLAN (pull
        request #1273).
      Eliminate trailing space in bpf_image() result.
      Fix DECnet packet filtering on big-endian hosts.
      Require "vpi" and "vci" values to be within valid ranges.
      Initialize the scratch memory store to 0.
      Require "[wlan] dir" integer value to be within range.
      Fix the != comparison for ATM and MTP field values.
      Deprecate bpf_filter().
      Require a live capture for all Linux BPF extensions.
      Have "outbound" mean Tx only for DLT_SLIP.
      Filter Linux SocketCAN frames in userland if necessary.
      Enable "[wlan] dir/type/subtype" for DLT_PPI.
      Require "(iso|isis) proto" values to be within valid ranges.
      Use the correct IS-IS PDU type offset for DLT_C_HDLC.
      Use the correct bit mask for IS-IS PDU type value.
      Fix the "|" and "&" operators of the "byte" primitive.
      Require "byte" argument value to be within range.
      Require "link proto" argument value to be within range.
      Require "(ip|ip6) proto" value to be within range.
      Require "protochain" value to be within range.
      Always enable the "gateway" primitive.
      Fix IPv4 multicast filtering to only include 224.0.0.0/4.
      Fix "(arp|rarp) host NAME" to ignore IPv6 quietly.
    rpcap:
      Support user names and passwords in rpcap:// and rpcaps:// URLs.
      Add a -t flag to rpcapd to specify the data channel port; from
        another incorporate-remote-capture project. (issue #1120)
      rpcapd: Refine SSL options in printusage().
      Fix a possible buffer overflow (Coverity CID 1619148).
    Documentation:
      Document a standard format for writing out BPF filter programs.
      Add a README.hurd.md file.